--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -16,7 +16,7 @@
     font-weight: 500;
     letter-spacing: 2px;
     color: rgb(11 11 11); 
-    margin-left: 4rem; */
+    margin-left: 4rem; 
     
 }
 
@@ -43,6 +43,56 @@
     font-size: 2rem;
     gap: 20px;
     margin-right: 4rem;
+}
+
+.menu-icon {
+    display: none; /* Gömd på större skärmar som standard */
+    cursor: pointer;
+    font-size: 2rem; /* Justera storlek efter behov */
+    color: rgb(11, 11, 11);
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    z-index: 1001; /* Se till att den ligger över andra element */
+}
+
+@media (max-width: 768px) {
+    .nav-links {
+        position: absolute;
+        right: 0;
+        top: 5rem;
+        flex-direction: column;
+        background-color: rgb(239, 216, 188);
+        width: 100%;
+        display: none; /* Gömd till en början */
+        margin-left: 0;
+        margin-top: 0;
+        gap: 0;
+    }
+
+    .nav-links a {
+        text-align: center;
+        padding: 10px;
+    }
+
+    .nav-links.active {
+        display: flex; /* Visa när menyikon är klickad */
+    }
+
+    .menu-icon {
+        display: block;
+        cursor: pointer;
+        margin-right: 1rem;
+    }
+
+    .logo, .icon-div {
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+
+    .menu-icon {
+        display: block; 
+}
 }
 
 
