--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -1,4 +1,12 @@
 .hero-section{
-    height: 40vh;
+    height: 60vh;
     background-color: blanchedalmond;
+}
+
+img {
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
+    object-position: center top; 
+    position: absolute;
 }
