--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: rgb(239, 216, 188);
-    height: 5rem;
+    height: 8rem;
     width: 100%;
 
     position: sticky; 
@@ -15,7 +15,7 @@
     font-size: 3rem;
     font-weight: 500;
     letter-spacing: 2px;
-    color: rgb(11 11 11); 
+    color: #252424; 
     margin-left: 4rem; 
     
 }
@@ -32,7 +32,7 @@
 }
 
 .nav-links a:hover {
-    color: gray;
+    color: rgb(93, 91, 91);
 }
 
 .icon-div {
@@ -42,14 +42,15 @@
     font-size: 2rem;
     gap: 20px;
     margin-right: 4rem;
+    columns: #252424;
 }
 
 .menu-icon {
-    display: none; /* Gömd på större skärmar som standard */
+    display: none; 
     cursor: pointer;
     font-size: 2.2rem;
-    color: rgb(11, 11, 11);
-    /* Ta bort position: absolute och andra positioneringsegenskaper */
+    color: #252424;
+    
 }
 
 @media (max-width: 1380px) {
@@ -67,7 +68,7 @@
         flex-direction: column;
         background-color: rgb(239, 216, 188);
         width: 100%;
-        display: none; /* Gömd till en början */
+        display: none; 
         margin-left: 0;
         margin-top: 0;
         gap: 0;
@@ -76,11 +77,11 @@
     .nav-links a {
         text-align: center;
         padding: 10px;
-        display: block; /* Gör länkarna block-element så de tar upp hela bredden */
+        display: block; 
     }
 
     .nav-links.active {
-        display: flex; /* Visa när menyikon är klickad */
+        display: flex; 
     }
 
     .icon-div {
@@ -93,7 +94,7 @@
     }
 
     .menu-icon {
-        display: block; /* Visa menyikon på mindre skärmar */
+        display: block; 
     }
 
     .logo {
