added useNavigate in productCard  and Styling productDetail

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -3,8 +3,16 @@
     justify-content: center;
     align-items: center;
     background-color: rgb(239, 216, 188);
-    gap: 20rem;
-    height: 16rem;
-    
+    gap: 10rem;
+    height: 16rem;  
 
+}
+
+@media (max-width: 768px) {
+    .footer-section {
+        flex-direction: column;
+        gap: 1rem; 
+        text-align: center;    
+        height: 38rem;
+    }
 }
