--- a/client/src/components/ProductDetail/ProductDetail.css
+++ b/client/src/components/ProductDetail/ProductDetail.css
@@ -1,13 +1,93 @@
 .productDetail-section {
-    height: 80vh;
-    display: flex; 
+    display: flex;
     justify-content: center; 
-    align-items: center; 
+    align-items: center;
+    width: 60%; /* Tar upp 60% av bredden */
+    height: 80vh; /* Justera efter behov */
+    margin: auto; /* Centrerar sektionen */
+    background: #fff; /* Bakgrundsfärg, justera efter behov */
+     /* Lite skugga för effekt, justera efter behov */
 }
 
 .img-container {
-    height: 40px;
-    width: 25px;
+    flex: 1; /* Tar upp hälften av bredden i productDetail-section */
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    overflow: hidden; 
+    
+}
+
+.img-container img {
+    max-height: 30%; 
+    max-width: 30%; 
+    object-fit: contain; 
+    /* border: 0.5px solid #ddd;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); */
+}
+
+.product-info {
+    flex: 1; /* Tar upp andra hälften av bredden */
+    display: flex;
+    flex-direction: column;
+    align-items: start; 
+    padding: 20px; 
+    gap: 10px; 
+    margin-left: 5rem;
+}
+
+.product-info h3 {
+    font-weight: 500;
+    font-size: 22px;
+
+}
+
+.product-color {
+    font-weight: 500;
+}
+
+.product-price {
+    font-weight: 500;
+}
+
+/* Stil för köpknappen */
+.buy-button {
+    background-color: rgb(93, 91, 91); /* Blå färg, justera efter behov */
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.buy-button:hover {
+    background-color: rgb(143, 137, 137); /* Mörkare blå vid hover, justera efter behov */
+}
+
+
+
+/* .productDetail-content {
+    margin-right: 15%;
+}
+.productDetail-section {
+  
+
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    height: 80vh;
+    width: 80vw;
+    flex-grow: initial;
+    
+}
+
+.img-container {
+  
+    flex: 2;
+    height: rem;
+    width: 70rem;
+    border: 0.5px solid #ddd;
     display: flex; 
     justify-content: center; 
     align-items: center; 
@@ -15,7 +95,13 @@
 }
 
 .img-container img {
+    
     max-height: 100%; 
     max-width: 100%; 
     object-fit: contain; 
 }
+.product-info {
+   
+    flex: 1;
+    z-index: 2000;
+} */
