--- a/client/src/components/ProductDetail/ProductDetail.css
+++ b/client/src/components/ProductDetail/ProductDetail.css
@@ -1,46 +1,65 @@
-.productDetail-content {
-   
-}
-
 .productDetail-section {
     display: flex;
     justify-content: center; 
     align-items: center;
-    width: 80%; /* Tar upp 60% av bredden */
-    height: 80vh; /* Justera efter behov */
-    margin: auto; /* Centrerar sektionen */
-    background: #fff; /* Bakgrundsfärg, justera efter behov */
+    height: 100vh; 
+    /* background-color: blueviolet; */
+    /* background: #fff;  */
     
 }
 
-/* .img-container {
-    position: relative;
-    background-color: blue;
-    flex: 1; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
-    overflow: hidden; 
-    
-}
-  
-.img-container img {
-    max-height: 30%; 
-    max-width: 30%; 
-    object-fit: contain; 
-} */
 .img-container{
     flex: 1;
-}
-.product-info {
-    
-    flex: 1; /* Tar upp andra hälften av bredden */
+    position: relative;
     display: flex;
-    flex-direction: column;
-    align-items: start; 
-    padding: 20px; 
-    gap: 10px; 
-    margin-left: 3rem;
+    justify-content: center;
+    align-items: center;
+    height: 40rem;
+    /* min-height: 300px; */
+    /* background-color: aquamarine; */
+
+    
+}
+
+.img-container img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    width: 80%;
+    height: 80%;
+    /* width: 25rem;
+    height: 30rem; */
+    aspect-ratio: 3/2;
+    object-fit: contain;   
+   
+}
+
+.arrow-icons {
+    width: 60%;
+    margin-top: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+    position: absolute;
+}
+ 
+.arrows {
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.product-info {
+    flex: 1; 
+    height: 30rem;
+    gap: 2rem; 
+    display: flex;
+    flex-direction: column; 
+    align-items: start;  
+    padding: 20px;  
+    margin-right: 2rem;
+    /* background-color: blue; */
 }
 
 .product-info h3 {
@@ -57,7 +76,7 @@
     font-weight: 500;
 }
 
-/* Stil för köpknappen */
+
 .buy-button {
     background-color: rgb(93, 91, 91); 
     color: white;
@@ -72,10 +91,12 @@
     background-color: rgb(143, 137, 137); 
 }
 
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
     .img-container img {
         max-height: 50%;
         max-width: 50%;
     }
-} */
+}
+
+
 
