fixed img-bug in cartdrawer/more styling changes

--- a/client/src/components/Banner/Banner.css
+++ b/client/src/components/Banner/Banner.css
@@ -5,5 +5,8 @@
     height: 3rem;
     color: #ffffff;
     background-color: #252424;
+    width: 100%;
+    font-size: larger;
+    font-weight: 600;
     
 }
