--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,15 +1,25 @@
 .navbar-section {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     background-color: rgb(239, 216, 188);
-    height: 8rem;
+    height: 9rem;
     width: 100%;
 
     position: sticky; 
     top: 0; 
     z-index: 1000; 
 }
+
+.top-row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%; /* Fyll hela bredden */
+    height: 8rem; /* Höjd på din nuvarande navbar */
+  }
+
 .logo {
     flex: 20%;
     font-size: 3rem;
@@ -19,6 +29,10 @@
     margin-left: 4rem; 
     
 }
+
+.logo:hover {
+    color: rgb(93, 91, 91);
+} 
 
 .nav-links{
     flex: 60%;
@@ -52,7 +66,18 @@
     
 }
 
-/* Stilar för varukorgsikonen och badge */
+.menu-icon:hover {
+    color: rgb(93, 91, 91);
+}   
+
+.user-icon:hover {
+    color: rgb(93, 91, 91);
+} 
+
+.cart-icon:hover {
+    color: rgb(93, 91, 91);
+} 
+
 .cart-icon-container {
     position: relative;
     display: inline-block;
