--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -1,12 +1,41 @@
-.hero-section{
-    height: 60vh;
-    background-color: blanchedalmond;
-}
-
-.hero-section img {
+.hero-section {
+    position: relative;
     width: 100%;
-    height: 60vh;
+    height: 500px; /* eller vilken höjd du föredrar */
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .hero-img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    object-position: center top; 
+    transition: opacity 0.5s ease-in-out;
+  }
+  
+  .left-arrow, .right-arrow {
+    cursor: pointer;
+    background: rgba(59, 57, 57, 0.5);
+    color: white;
+    border: none;
+    padding: 10px; /* gör detta lika för att uppnå en cirkel */
+    font-size: 24px;
+    z-index: 100;
     position: absolute;
-}
+    border-radius: 50%; /* detta gör rutorna till cirklar */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px; /* specificera höjd */
+    width: 40px; /* specificera bredd */
+  }
+  
+  .left-arrow {
+    left: 10px; /* eller justera enligt din design */
+  }
+  
+  .right-arrow {
+    right: 10px; /* eller justera enligt din design */
+  }
