--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -1,7 +1,7 @@
 .hero-section {
     position: relative;
     width: 100%;
-    height: 500px; /* eller vilken höjd du föredrar */
+    height: 500px; 
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -20,22 +20,22 @@
     background: rgba(59, 57, 57, 0.5);
     color: white;
     border: none;
-    padding: 10px; /* gör detta lika för att uppnå en cirkel */
+    padding: 10px; 
     font-size: 24px;
     z-index: 100;
     position: absolute;
-    border-radius: 50%; /* detta gör rutorna till cirklar */
+    border-radius: 50%; 
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 40px; /* specificera höjd */
-    width: 40px; /* specificera bredd */
+    height: 40px; 
+    width: 40px; 
   }
   
   .left-arrow {
-    left: 10px; /* eller justera enligt din design */
+    left: 10px; 
   }
   
   .right-arrow {
-    right: 10px; /* eller justera enligt din design */
+    right: 10px; 
   }
