--- a/client/src/components/CartDrawer/CartDrawer.css
+++ b/client/src/components/CartDrawer/CartDrawer.css
@@ -75,6 +75,7 @@
 }
 
 .totalCalc button {
+  margin-top: 2rem;
   background-color: rgb(93, 91, 91); 
   color: white;
   padding: 8px 16px;
@@ -82,5 +83,11 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin-top: 1.8rem;
+  font-size: large;
+}
+
+.totalCalc button:hover {
+  background-color: white;
+  color: rgb(93, 91, 91);
+  border: 1px solid rgb(93, 91, 91); 
 }
