--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -3,7 +3,7 @@
     padding: 20px;
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
     width: 25rem;
-    height: 25rem; 
+    height: 60vh; 
     margin: auto;
     margin-top: 10rem;
     font-weight: 500;
@@ -53,14 +53,29 @@ input:focus {
     font-size: large;
 }
 
+.createAcount-button {
+    display: inline-block; /* Lägg till detta för att göra länken bete sig mer som en knapp */
+    width: 100%; /* Lägg till detta om du vill att länken ska fylla sin container */
+    margin-top: 1rem;
+    background-color:rgb(93, 91, 91);
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: large;
+    text-align: center;
+    text-decoration: none;
+
+}
 .login-button:hover, .createAcount-button:hover {
     background-color: white;
     color: rgb(93, 91, 91);
     border: 1px solid rgb(93, 91, 91);
 }
 
-.createAcount-button {
-    margin-top: 1rem;
 
-}
+
+
 
