--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -12,6 +12,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: center -3rem; 
     transition: opacity 0.5s ease-in-out;
   }
   
