--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -29,7 +29,6 @@
     letter-spacing: 2px;
     color: #252424; 
     margin-left: 4rem; 
-    
 }
 
 .logo:hover {
@@ -64,8 +63,6 @@
     display: none; 
 }
 
-
-
 .menu-icon:hover {
     color: rgb(93, 91, 91);
 }   
@@ -75,11 +72,11 @@
 } 
 
 .user-icon-logged-in {
-    color: rgb(137, 165, 150); /* eller den färg du vill använda när användaren är inloggad */
+    color: rgb(137, 165, 150); 
 }
 
 .user-icon-logged-out {
-    color: grey; /* eller den färg du vill använda när användaren inte är inloggad */
+    color: #252424; 
 }
 
 .cart-icon:hover {
@@ -95,7 +92,7 @@
     position: absolute;
     top: 0.6px; 
     right: -6px;
-    background-color: rgb(93, 91, 91); 
+    background-color: rgb(137, 165, 150); 
     color: white;
     border-radius: 50%;
     width: 20px;     
@@ -107,9 +104,11 @@
     justify-content: center;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.15);
   }
-
-  /* Se över responsiviteten mer */
-
+  @media (max-width: 585px) {
+    .logo {
+        margin-left: 0.8rem; 
+    }
+}
 @media (max-width: 768px) {
     .cart-badge {
         top: -8px;
@@ -117,6 +116,10 @@
         width: 12px; 
         height: 12px;
         font-size: 0.6rem;
+    }
+
+    .logo {
+        margin-left: 0.8rem; 
     }
 }
 
@@ -149,7 +152,6 @@
         gap: 20px;
 
     }
-
 
     .menu-icon {
         display: block;
