--- a/client/src/components/Banner/Banner.css
+++ b/client/src/components/Banner/Banner.css
@@ -7,6 +7,8 @@
     background-color: #252424;
     width: 100%;
     font-size: larger;
-    font-weight: 600;
+    font-weight: 500;
+    letter-spacing: 1.2px;
+    
     
 }
