--- a/client/src/components/Banner/Banner.css
+++ b/client/src/components/Banner/Banner.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     height: 3rem;
     color: #ffffff;
     background-color: #252424;
@@ -11,4 +12,14 @@
     letter-spacing: 1.2px;
     
     
+}
+
+@media (max-width: 890px) {
+
+    .banner-section p {
+        margin-left: 2rem;
+        margin-right: 2rem;
+        font-size: smaller;
+        
+    }
 }
