--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -2,8 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: space-between; */
-    /* background-color: rgb(239, 216, 188); */
     background-color:    white;
     height: 9rem;
     width: 100%;
@@ -86,9 +84,9 @@
 .cart-icon-container {
     position: relative;
     display: inline-block;
-  }
+}
   
-  .cart-badge {
+.cart-badge {
     position: absolute;
     top: 0.6px; 
     right: -6px;
@@ -103,65 +101,42 @@
     align-items: center;
     justify-content: center;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.15);
-  }
+}
+
+  .icon-div {
+    display: flex; 
+    justify-content: flex-end; 
+    align-items: center; 
+    gap: 10px; 
+    margin-right: 2rem;
+    margin-left: auto; 
+    font-size: 2rem;
+}
+
+
+
+  @media (max-width: 450px) {
+    .banner-section {
+        height: 6rem;
+    }
+}
+
   @media (max-width: 585px) {
     .logo {
         margin-left: 0.8rem; 
     }
 }
-@media (max-width: 768px) {
-    .cart-badge {
-        top: -8px;
-        right: -8px;
-        width: 12px; 
-        height: 12px;
-        font-size: 0.6rem;
-    }
 
-    .logo {
-        margin-left: 0.8rem; 
+@media (max-width: 770px) {
+    .cart-icon-container .cart-badge {
+        top: 5px; 
+        right: -2px; 
+        width: 16px;
+        height: 16px; 
+        font-size: 0.6rem; 
     }
 }
 
-.icon-div {
-        display: flex; 
-        justify-content: flex-end; 
-        align-items: center; 
-        gap: 10px; 
-        margin-right: 2rem;
-        margin-left: auto; 
-        font-size: 2rem;
-    }
-
-
-
-@media (max-width: 1565px) {
-    .icon-div {
-        display: flex; 
-        justify-content: flex-end; 
-        align-items: center; 
-        gap: 10px; 
-        margin-right: 2rem;
-        margin-left: auto; 
-        font-size: 2rem;
-    }
-    
-}
-@media (max-width: 1380px) {
-    .nav-links {
-        gap: 20px;
-
-    }
-
-    .menu-icon {
-        display: block;
-        margin-left: 1rem; 
-        font-size: 1.8rem;
-        color: #252424;
-        cursor: pointer;
-            
-        }
-}
 @media (max-width: 1080px) {
  
     .nav-links {
@@ -197,11 +172,45 @@
     }
 
     .logo {
-        margin-left: 1remrem;
-        margin-right: 1rem; 
-        font-size: 2.2rem;
+        font-size: 2.7rem;
     }
 
+}
+
+@media (max-width:1125px ){
+    .menu-icon {
+        display: block;
+        margin-left: 1rem; 
+        font-size: 1.8rem;
+        color: #252424;
+        cursor: pointer;  
+        }
+
+    .nav-links {
+        display: none;
+    }
+
+}
+
+@media (max-width:1230px ){
+    .nav-links {
+        margin-left: 2rem;
+        
+    }
+
+}
+
+@media (max-width: 1565px) {
+    .icon-div {
+        display: flex; 
+        justify-content: flex-end; 
+        align-items: center; 
+        gap: 10px; 
+        margin-right: 2rem;
+        margin-left: auto; 
+        font-size: 2rem;
+    }
+    
 }
 
 
