--- a/client/src/components/CartDrawer/CartDrawer.css
+++ b/client/src/components/CartDrawer/CartDrawer.css
@@ -65,8 +65,7 @@
 
 .delete-icon {
     cursor: pointer;
-    color: rgb(197, 102, 102); /* Eller den färg du föredrar */
-    /* // Lägg till ytterligare stilar vid behov */
+    color: rgb(197, 102, 102); 
   }
 
   .totalCalc h3{
