--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -49,12 +49,14 @@
 }
 
 .icon-div {
-    display: flex;
-    font-size: 2rem;
+    display: flex; 
+    justify-content: flex-end; 
+    align-items: center; 
+    gap: 10px; 
+    margin-right: 2rem;
+    margin-left: auto; 
+    font-size: 1.8rem;
     cursor: pointer;
-    gap: 20px;
-    margin-right: 4rem;
-    columns: #252424;
 }
 
 .menu-icon {
@@ -103,76 +105,22 @@
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.15);
 }
 
-  .icon-div {
-    display: flex; 
-    justify-content: flex-end; 
-    align-items: center; 
-    gap: 10px; 
-    margin-right: 2rem;
-    margin-left: auto; 
-    font-size: 2rem;
-}
 
 
 
-  @media (max-width: 450px) {
-    .banner-section {
-        height: 6rem;
-    }
-}
 
-  @media (max-width: 585px) {
-    .logo {
-        margin-left: 0.8rem; 
-    }
-}
 
-@media (max-width: 770px) {
-    .cart-icon-container .cart-badge {
-        top: 5px; 
-        right: -2px; 
-        width: 16px;
-        height: 16px; 
-        font-size: 0.6rem; 
-    }
-}
 
-@media (max-width: 1080px) {
- 
+
+
+
+
+
+
+@media (max-width:1230px ){
     .nav-links {
-        position: absolute;
-        top: 5rem;
-        right: 0;
-        flex-direction: column;
-        background-color: rgb(239, 216, 188);
-        width: 100%;
-        display: none; 
-        margin-left: 0;
-        margin-top: 0;
-        gap: 0;
-    }
-
-    .nav-links a {
-        text-align: center;
-        padding: 10px;
-        display: block; 
-    }
-
-    .nav-links.active {
-        display: flex; 
-    }
-
-    .icon-div {
-        display: flex; 
-        justify-content: flex-end; 
-        align-items: center; 
-        gap: 10px; 
-        margin-right: 1rem;
-        font-size: 2rem;
-    }
-
-    .logo {
-        font-size: 2.7rem;
+        margin-left: 2rem;
+        
     }
 
 }
@@ -192,28 +140,66 @@
 
 }
 
-@media (max-width:1230px ){
+@media (max-width: 1080px) {
+ 
     .nav-links {
-        margin-left: 2rem;
+        display: none; 
+    }
+
+    .nav-links a {
+        text-align: center;
+        padding: 10px;
+        display: block; 
+    }
+
+    .nav-links.active {
+        display: flex; 
+    }
+
+    .icon-div {
+        gap: 7px; 
+        /* font-size: 1.5rem; */
+    }
+
+    .logo {
+        font-size: 2.7rem;
+    }
+
+}
+
+@media (max-width: 770px) {
+    .cart-icon-container .cart-badge {
+        top: 5px; 
+        right: -2px; 
+        width: 16px;
+        height: 16px; 
+        font-size: 0.6rem; 
+    }
+}
+
+@media (max-width: 585px) {
+    .logo {
+        font-size: 2rem;
+        margin-left: 0.8rem; 
+    }
+}
+
+@media (max-width: 450px) {
+    .banner-section {
+        height: 4rem;
+    }
+
+    .menu-icon {
+        display: block;
+        font-size: 1rem;
         
     }
-
-}
-
-@media (max-width: 1565px) {
     .icon-div {
-        display: flex; 
-        justify-content: flex-end; 
-        align-items: center; 
-        gap: 10px; 
-        margin-right: 2rem;
-        margin-left: auto; 
-        font-size: 2rem;
+        font-size: 1rem;
     }
-    
-}
+}   
 
 
 
 
-    
+
