--- a/client/src/components/CartDrawer/CartDrawer.css
+++ b/client/src/components/CartDrawer/CartDrawer.css
@@ -1,81 +1,76 @@
 .cartItem-div {
-    display: flex;
-    flex: 1;
-    flex-direction: row;
-    /* justify-content: space-between;
-    flex-wrap: wrap; */
-    /* background-color: aqua; */
-    margin-bottom: 2rem;
-    line-height: 1.8rem;
-    color:#252424;
-    
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  margin-bottom: 2rem;
+  line-height: 1.8rem;
+  color: #252424;
 }
 
 .cartItem-div img {
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    width: 5rem;
-    height: auto;
-    
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  width: 5rem;
+  height: auto;
 }
 
 .titleAndPrice {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    margin-left: 1rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
 }
 
 .productTitle {
-    flex-wrap: wrap;
-    font-weight: 400;
-    font-size: medium;
+  flex-wrap: wrap;
+  font-weight: 400;
+  font-size: medium;
 }
 
 .quantity-control {
-    display: flex;
-    align-items: center;
-    justify-content: start;
-  }
-  
-  .circle-button {
-    background-color: #f0f0f0; /* Grå bakgrund */
-    border: none;
-    border-radius: 50%; /* Gör knapparna cirkulära */
-    width: 20px; /* Bredd på cirkeln */
-    height: 20px; /* Höjd på cirkeln */
-    font-size: 16px; /* Storlek på plus- och minustecknet */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    margin: 5px;
-  }
-  
-  .circle-button:hover {
-    background-color: #e0e0e0; /* Mörkare grå färg när musen är över */
-  }
-  
-  input[type='number'] {
-    width: 50px; /* Bredd på nummerfältet */
-    text-align: center;
-    margin: 0 10px;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: start;
+}
+
+.circle-button {
+  background-color: #f0f0f0;
+  border: none;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.circle-button:hover {
+  background-color: #e0e0e0;
+}
+
+input[type="number"] {
+  width: 50px;
+  text-align: center;
+  margin: 0 10px;
+}
 
 .delete-icon {
-    cursor: pointer;
-    color: rgb(197, 102, 102); 
-  }
+  cursor: pointer;
+  color: rgb(197, 102, 102);
+}
 
-  .totalCalc h3{
-    font-weight: 500;
-    color:#252424;
+.totalCalc h3 {
+  font-weight: 500;
+  color: #252424;
 }
 
 .totalCalc button {
   margin-top: 2rem;
-  background-color: rgb(93, 91, 91); 
+  background-color: rgb(93, 91, 91);
   color: white;
   padding: 8px 16px;
   border: none;
@@ -88,7 +83,7 @@
 .totalCalc button:hover {
   background-color: white;
   color: rgb(93, 91, 91);
-  border: 1px solid rgb(93, 91, 91); 
+  border: 1px solid rgb(93, 91, 91);
 }
 
 .loginMessage {
