--- a/client/src/components/Confirmation/Confirmation.css
+++ b/client/src/components/Confirmation/Confirmation.css
@@ -1,50 +1,51 @@
 .confirmation-div {
-    display: flex;
-    /* justify-content: center; */
-    flex-direction: column;
-    align-items: center;
-    height: 66vh;
-    margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 66vh;
+  margin-top: 5rem;
 }
 
 .confirmation-div h2 {
-    margin: 0 0 2rem 0
+  margin: 0 0 2rem 0;
 }
 
 .orderList {
-    display: flex;
-    flex-direction: column ;
+  display: flex;
+  flex-direction: column;
 }
+
 .orderItemCard {
-    display: flex; 
-    align-items: center; 
-    justify-content: flex-start; 
-    gap: 1rem; 
-    margin-bottom: 1rem; 
-    padding: 1rem; 
-    /* border: 1px solid #ccc;  */
-    box-shadow: 0 2px 4px rgba(3, 3, 3, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  box-shadow: 0 2px 4px rgba(3, 3, 3, 0.1);
 }
-.orderItemText{
-    font-size: 1rem;
-    font-weight: 400;
+
+.orderItemText {
+  font-size: 1rem;
+  font-weight: 400;
 }
 
 .totalText {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .orderItemText h3 {
-    font-weight: 500;
+  font-weight: 500;
 }
+
 .productImage {
-    width: 6rem; 
-    height: 6rem; 
-    object-fit: cover; 
-    border-radius: 0.5rem; 
+  width: 6rem;
+  height: 6rem;
+  object-fit: cover;
+  border-radius: 0.5rem;
 }
 
 .orderItemCard > p {
-    margin: 0; 
-    min-width: 100px; 
+  margin: 0;
+  min-width: 100px;
 }
