--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -1,42 +1,42 @@
 .hero-section {
-    position: relative;
-    width: 100%;
-    height: 500px; 
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .hero-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    /* object-position: center -3rem;  */
-    transition: opacity 0.5s ease-in-out;
-  }
-  
-  .left-arrow, .right-arrow {
-    cursor: pointer;
-    background: rgba(59, 57, 57, 0.5);
-    color: white;
-    border: none;
-    padding: 10px; 
-    font-size: 24px;
-    z-index: 100;
-    position: absolute;
-    border-radius: 50%; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40px; 
-    width: 40px; 
-  }
-  
-  .left-arrow {
-    left: 10px; 
-  }
-  
-  .right-arrow {
-    right: 10px; 
-  }
+  position: relative;
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.hero-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.left-arrow,
+.right-arrow {
+  cursor: pointer;
+  background: rgba(59, 57, 57, 0.5);
+  color: white;
+  border: none;
+  padding: 10px;
+  font-size: 24px;
+  z-index: 100;
+  position: absolute;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 40px;
+}
+
+.left-arrow {
+  left: 10px;
+}
+
+.right-arrow {
+  right: 10px;
+}
