--- a/client/src/components/ScrollToTop/ScrollToTop.css
+++ b/client/src/components/ScrollToTop/ScrollToTop.css
@@ -1,10 +1,10 @@
 .scroll-to-top-icon {
-    font-size: 3rem; 
-    color: white; 
-    cursor: pointer; 
-    transition: color 0.4s ease
+  font-size: 3rem;
+  color: white;
+  cursor: pointer;
+  transition: color 0.4s ease;
 }
 
 .scroll-to-top-icon:hover {
-    color: rgb(93, 91, 91); 
+  color: rgb(93, 91, 91);
 }
